syntax="proto3";

option go_package = "./genproto/doctorpb";

import "google/protobuf/timestamp.proto";                 

// ---------------- Service ----------------
service DoctorService {
    // Appointment
    rpc CreateAppointment(CreateAppointmentRequest) returns (CreateAppointmentResponse);
    rpc GetAppointmentById(GetAppointmentByIdRequest) returns (GetAppointmentByIdResponse);
    rpc ListAppointments(ListAppointmentsRequest) returns (ListAppointmentsResponse);
    rpc UpdateAppointment(UpdateAppointmentRequest) returns (UpdateAppointmentResponse);
    rpc DeleteAppointment(DeleteAppointmentRequest) returns (DeleteAppointmentResponse);

    // Prescription
    rpc CreatePrescription(CreatePrescriptionRequest) returns (CreatePrescriptionResponse);
    rpc GetPrescriptionById(GetPrescriptionByIdRequest) returns (GetPrescriptionByIdResponse);
    rpc ListPrescriptions(ListPrescriptionsRequest) returns (ListPrescriptionsResponse);
    rpc UpdatePrescription(UpdatePrescriptionRequest) returns (UpdatePrescriptionResponse);
    rpc DeletePrescription(DeletePrescriptionRequest) returns (DeletePrescriptionResponse);
}

message Appointment {
    string id = 1;
    string doctor_id = 2;
    string patient_id = 3;
    google.protobuf.Timestamp date = 4;
}

message Prescription {
    string id = 1;
    string doctor_id = 2;
    string patient_id = 3;
    string case_history = 4;
    string medication = 5;
    string description = 6;
    Timestamps2 timestamps = 7;
}

// ---------------- Appointment CRUD ----------------
//CREATE
message CreateAppointmentRequest {
    string doctor_id = 1;
    string patient_id = 2;
    google.protobuf.Timestamp date = 3;
}
message CreateAppointmentResponse {
    Appointment appointment = 1;
}

//GET BY ID
message GetAppointmentByIdRequest {
    string id = 1;
}
message GetAppointmentByIdResponse {
    Appointment appointment = 1;
}

//LIST
message ListAppointmentsRequest {
    google.protobuf.Timestamp date = 1;
    int32 page = 2;
    int32 limit = 3;
}
message ListAppointmentsResponse {
    repeated Appointment appointment = 1;
    int32 total_count = 2;
}

//UPDATE
message UpdateAppointmentRequest {
    string doctor_id = 1;
    string patient_id = 2;
    google.protobuf.Timestamp date = 3;
}
message UpdateAppointmentResponse {
    Appointment appointment = 1;
}

//DELETE
message DeleteAppointmentRequest {
    string id = 1;
}
message DeleteAppointmentResponse {
    int64 status = 1; // 204 = deleted
}

// ---------------- Prescription CRUD ----------------
//CREATE
message CreatePrescriptionRequest {
    string doctor_id = 1;
    string patient_id = 2;
    string case_history = 3;
    string medication = 4;
    string description = 5;
}
message CreatePrescriptionResponse {
    Prescription presc = 1;
}

//GET BY ID
message GetPrescriptionByIdRequest {
    string id = 1;
}
message GetPrescriptionByIdResponse {
    Prescription presc = 1;
}

//LIST
message ListPrescriptionsRequest{
    int32 page = 1;
    int32 limit = 2;
}
message ListPrescriptionsResponse {
    repeated Prescription presc = 1;
    int32 total_count = 2;
}

//UPDATE
message UpdatePrescriptionRequest {
   Prescription presc = 1;
}
message UpdatePrescriptionResponse {
    Prescription presc = 1;
}

//DELETE
message DeletePrescriptionRequest {
    string id = 1;
}
message DeletePrescriptionResponse {
    int64 status = 1; // 204 = deleted
}

message Timestamps2 {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp updated_at = 2;
}