syntax = "proto3";

option go_package = "./genproto/pharmacistpb";             

import "google/protobuf/timestamp.proto";                 

// ---------------- Service ----------------
service PharmacistService {
     // Medicine
     rpc CreateMedicine(CreateMedicineRequest) returns (CreateMedicineResponse);
     rpc GetMedicineById(GetMedicineByIdRequest) returns (GetMedicineByIdResponse);
     rpc ListMedicines(ListMedicinesRequest) returns (ListMedicinesResponse);
     rpc UpdateMedicine(UpdateMedicineRequest) returns (UpdateMedicineResponse);
     rpc DeleteMedicine(DeleteMedicineRequest) returns (DeleteMedicineResponse);
 
     // Medicine Category
     rpc CreateMedicineCategory(CreateMedicineCategoryRequest) returns (CreateMedicineCategoryResponse);
     rpc GetMedicineCategoryById(GetMedicineCategoryByIdRequest) returns (GetMedicineCategoryByIdResponse);
     rpc ListMedicineCategories(ListMedicineCategoriesRequest) returns (ListMedicineCategoriesResponse);
     rpc UpdateMedicineCategory(UpdateMedicineCategoryRequest) returns (UpdateMedicineCategoryResponse);
     rpc DeleteMedicineCategory(DeleteMedicineCategoryRequest) returns (DeleteMedicineCategoryResponse);
}

// Medicine category enum
enum MedicineCategoryType {
    MEDICINE_CATEGORY_UNSPECIFIED = 0; // default
    TABLET = 1;
    SYRUP = 2;
    INJECTION = 3;
    OINTMENT = 4;
    DROPS = 5;
    CREAM = 6;
    CAPSULE = 7;
}

// Medicine status enum
enum MedicineStatus {
    MEDICINE_STATUS_UNSPECIFIED = 0; // default
    MEDICINE_STATUS_AVAILABLE = 1;
    MEDICINE_STATUS_OUT_OF_STOCK = 2;
    MEDICINE_STATUS_EXPIRED = 3;
    MEDICINE_STATUS_DISCONTINUED = 4;
}

message Medicine {
    string id = 1;
    string name = 2;
    MedicineCategoryType category = 3;
    string description = 4;
    float price = 5;
    string company = 6;
    MedicineStatus status = 7;
    Timestamps5 timestamps = 8;
}


message MedicineCategory {
    string id = 1;
    MedicineCategoryType name = 2;
    string description = 3;
    Timestamps5 timestamps = 5;
}

// ---------------- Medicine CRUD ----------------
//CREATE
message CreateMedicineRequest {
    string name = 1;
    MedicineCategoryType category = 2;
    string description = 3;
    float price = 4;
    string company = 5;
    MedicineStatus status = 6; 
}
message CreateMedicineResponse {
    Medicine medicine = 1;
}

//GET BY ID
message GetMedicineByIdRequest {
    string id = 1;
}
message GetMedicineByIdResponse {
    Medicine medicine = 1;
}

//LIST 
message ListMedicinesRequest {
    string search = 1;        // name, category, company
    MedicineStatus status = 2;         // optional filter (available, out_of_stock)
    int32 page = 3;           // for pagination
    int32 limit = 4;          // for pagination
}
message ListMedicinesResponse {
    repeated Medicine medicines = 1;
    int32 total_count = 2;    // umumiy soni
}

//UPDATE
message UpdateMedicineRequest {
    string id = 1;
    string name = 2;
    MedicineCategoryType category = 3;
    string description = 4;
    float price = 5;
    string company = 6;
    MedicineStatus status = 7;
}
message UpdateMedicineResponse {
    Medicine medicine = 1;
}

//DELETE
message DeleteMedicineRequest {
    string id = 1;
}
message DeleteMedicineResponse {
    int64 status = 1; // 204 = deleted
}

// ---------------- Medicine Category CRUD ----------------
//CREATE
message CreateMedicineCategoryRequest {
    MedicineCategoryType name = 1;
    string description = 2;
}
message CreateMedicineCategoryResponse {
    MedicineCategory category = 1;
}

//GET BY ID
message GetMedicineCategoryByIdRequest {
    string id = 1;
}
message GetMedicineCategoryByIdResponse {
    MedicineCategory category = 1;
}

//LIST
message ListMedicineCategoriesRequest {
    string search = 1;        //name
    int32 page = 3;           // for pagination
    int32 limit = 4;          // for pagination
}
message ListMedicineCategoriesResponse {
    repeated MedicineCategory categories = 1;
    int64 total_count = 2; 
}

//UPDATE
message UpdateMedicineCategoryRequest {
    string id = 1;
    MedicineCategoryType name = 2;
    string description = 3;
}
message UpdateMedicineCategoryResponse {
    MedicineCategory category = 1;
}

//DELETE
message DeleteMedicineCategoryRequest {
    string id = 1;
}
message DeleteMedicineCategoryResponse {
    int64 status = 1;// 204 = deleted
}

message Timestamps5 {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp updated_at = 2;
}